# CodeX-Storehouse

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: import_preview_walkthrough.md
inventory_app/: __init__.py  app.py  auth.py  inventory.py
inventory_app/templates/: analytics.html  index.html  login.html  recent_activity.html  users.html
src/inventory_service/: __init__.py  api.py  config.py  crud.py  database.py  main.py  management.py  models.py  schemas.py
tests/: conftest.py  test_auth_login_logs.py  test_inventory.py  test_shortcuts_api.py
